--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 }
 
 header, footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #279f83;
+    color: #b53030;
     text-align: center;
     padding: 1rem 0;
 }
